# growing-pains

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
aggregated_data/: README.md
config/: constants.py  data_source_config.json  data_sources.py  experiment_presets.yaml
data/input/: README.md  lb.pickle  mmlu_fields.pickle
scripts/: run_chain_job.sh  run_experiments.py  run_sweep.py  run_sweep.sh  run_sweep_driver_job.sh
src/: __init__.py  calibration.py  chain_experiment.py  cleanup.py  data_loading.py  dataset_skill_labels.csv  evaluation.py  io.py
src/experiments/chain_linking/: chain_linking_disjoint.py  chain_linking_parallel.py
src/experiments/equating/: cross_dataset_equating.py  fixed_anchor_calibration.py
src/experiments/equating/irt_equating/: fixed_anchor_calibration.py  fixed_anchor_linking.py
src/experiments/utils/: model_matcher.py
src/irt/: __init__.py  anchors.py  cold_start.py  core.py  estimation.py  fit.py  interfaces.py  math_utils.py  mitv.py  naive.py  selector.py  training.py
src/llm_eval/: __init__.py
src/llm_eval/config/: __init__.py  defaults.yaml  metrics.yaml
src/llm_eval/evaluation/: README.md  __init__.py  metrics.py  simulation.py  validator.py
src/llm_eval/ingestion/: README.md  __init__.py  base.py  hf_datasets.py  local_files.py
src/llm_eval/matrix/: README.md  __init__.py  builder.py  cleaner.py  schema.py  splitter.py  storage.py
src/llm_eval/normalization/: README.md  __init__.py  base.py  registry.py  rules.py
src/llm_eval/scoring/: README.md  __init__.py  leaderboard.py  time_series.py
src/llm_eval/selection/: README.md  __init__.py  cold_start.py  exact_notebook_anchors.py  exact_notebook_estimation.py  exact_notebook_irt.py  mitv.py  naive.py
src/llm_eval/selection/tinyBenchmarks/: NOTEBOOK_COMPATIBILITY.md  (+8 more)
src/llm_eval/serving/: README.md  api.py  cli.py
src/llm_eval/training/: __init__.py  cli.py  irt.py
src/llm_eval/utils/: __init__.py  io.py  logging.py  time.py
tests/: demo_test.py
