[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growing-pains"
version = "0.1.0"
description = "Fixed parameter calibration for extensible LLM benchmarking"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "src*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
